--- a/main.ipynb
+++ b/main.ipynb
@@ -23,8 +23,8 @@
    "source": [
     "# Set paths\n",
     "train_img_dir = 'data/coco_top10_2000/data'\n",
+    "val_img_dir = 'data/coco_top10_2000/data'\n",
     "# train_ann_file = 'data/coco_top10_2000/labels.json'\n",
-    "val_img_dir = 'data/coco_top10_2000/data'  # Use same for validation if no separate val set\n",
     "# val_ann_file = 'data/coco_top10_2000/labels.json'\n",
     "\n",
     "train_ann_file = 'data/coco_top10_2000/labels_balanced.json'\n",
@@ -78,6 +78,11 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Training"
+  },
+  {
    "cell_type": "code",
    "metadata": {},
    "source": [
@@ -108,7 +113,7 @@
    "metadata": {},
    "source": [
     "import traceback\n",
-    "model.train()  # <-- use train mode for loss computation!\n",
+    "model.train()\n",
     "valLoss = 0.0\n",
     "numBatches = 0\n",
     "with torch.no_grad():\n",
@@ -201,7 +206,7 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "def load_model_for_inference(model_path, num_classes, device):\n",
+    "def loadModel(model_path, num_classes, device):\n",
     "    from torchvision.models.detection.faster_rcnn import FastRCNNPredictor\n",
     "    import torchvision\n",
     "    model = torchvision.models.detection.fasterrcnn_resnet50_fpn(weights='DEFAULT')\n",
@@ -222,42 +227,11 @@
     "import matplotlib.pyplot as plt\n",
     "from torchvision import transforms\n",
     "\n",
-    "def run_inference(model, dataset, device, img_index=None, score_thresh=0.5):\n",
-    "    if img_index is None:\n",
-    "        import random\n",
-    "        img_index = random.randint(0, len(dataset)-1)\n",
-    "    class_names = dataset.classNames\n",
-    "    img, _ = dataset[img_index]\n",
-    "    with torch.no_grad():\n",
-    "        prediction = model([img.to(device)])\n",
-    "    boxes = prediction[0]['boxes'].cpu().numpy()\n",
-    "    scores = prediction[0]['scores'].cpu().numpy()\n",
-    "    labels = prediction[0]['labels'].cpu().numpy()\n",
-    "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow(transforms.ToPILImage()(img))\n",
-    "    ax = plt.gca()\n",
-    "    for box, score, label in zip(boxes, scores, labels):\n",
-    "        if score > score_thresh:\n",
-    "            x1, y1, x2, y2 = box\n",
-    "            ax.add_patch(plt.Rectangle((x1, y1), x2-x1, y2-y1, fill=False, edgecolor='red', linewidth=2))\n",
-    "            class_name = class_names[label-1] if 1 <= label <= len(class_names) else 'unknown'\n",
-    "            ax.text(x1, y1, f'{class_name}: {score:.2f}', color='white', fontsize=12, bbox=dict(facecolor='red', alpha=0.5))\n",
-    "    plt.axis('off')\n",
-    "    plt.show()\n",
-    "    return boxes, scores, labels"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
     "# Load model\n",
     "model_path = \"model.pth\"\n",
     "num_classes = 11  # 10 classes + background\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = load_model_for_inference(model_path, num_classes, device)"
+    "model = loadModel(model_path, num_classes, device)"
    ],
    "outputs": [],
    "execution_count": null
